src/app/pages/feature/manage/managefeature.page.scss
app-managefeature {

  ion-title, ion-item {
    cursor: pointer;
  }

  ion-menu-toggle {
    ion-badge {
      position: relative;
      top: 0.1rem;
      right: 22px;

      /*& ~ ion-icon {
        outline-color: whitesmoke;
      }*/
      z-index: 5;
    }
  }

  .full-height {
    height: 100%;
  }

  .desktop-header {
    //padding: 30px 0;
    background-color: transparent !important;
    box-shadow: none !important;

    --background: transparent !important;

    ion-col {
      box-shadow: 0 5px 10px rgba(0,0,0,.2);
      padding: 5px;
      margin: 5px;
      border-radius: 10px;
      ion-item {
        .menu-label {
          font-size: 12px !important;
          margin-left: 4px;
        }
        --inner-padding-end: 0;
      }
    }
  }

  .selected {
    background-color: var(--ion-color-primary) !important;
  }

  .selected * {
    color: white;
    background-color: var(--ion-color-primary) !important;
  }

  ion-router-outlet {
    border-left: 1px solid var(--ion-color-lightgrey);
  }

/*  ion-content {
    display: flex;
    flex-direction: column;
  }*/

  .bold-font {
    font-weight: bold;
  }
}

